test: 단위 테스트 get(0) -> getFirst()